fix: fix header spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -95,7 +95,8 @@ hr {
   z-index: 4;
 }
 .header h1 {
-  margin: 0 0 0 8px;
+  margin: 0;
+  padding-inline-start: 8px;
   font-size: 1.25rem;
   font-weight: 300;
   letter-spacing: 0.5px;
@@ -182,10 +183,11 @@ hr {
   opacity: 0.16;
 }
 .banner {
-  height: 64px;
+  min-height: 64px;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 12px 24px;
 }
 .banner p {
   color: var(--theme-color);
